# recipe-backend

./: .gitignore  .terraform.lock.hcl  README.md  docker-compose.yml  main.tf  main_test.go
.github/workflows/: api-test.yml  forager-test.yml  gateway-test.yml  go-test.yml  terraform-apply.yml  terraform-plan.yml  test.yml  user-test.yml
api/: Dockerfile  Makefile  README.md  auth.go  db.go  go.mod  go.sum  ingredient.go  ingredient_test.go  main.go  main_test.go  mq.go  recipe.go  recipe_test.go  recipe_util.go  recipe_util_test.go  recipe_util_text.go  uri.go  user.go  user_test.go
api/core/: ingredient.go  recipe.go  recipe_util.go
api/ent/: client.go  config.go  ent.go  ingredient.go  ingredient_create.go  ingredient_delete.go  ingredient_query.go  ingredient_update.go  mutation.go  recipe.go  recipe_create.go  (+7 more)
ent/: client.go  ent.go  runtime.go  user.go  user_create.go  user_query.go
forager/: .dockerignore  Dockerfile  Makefile  Procfile  pyproject.toml
forager/forager/: __init__.py  views.py
forager/forager/fooddata/: convert.py  lookup.py
forager/forager/mq/: connect.py  receive.py  send.py
forager/tests/: test_forager.py
forager/tests/fooddata/: test_convert.py
gateway/: .profile  Dockerfile  auth.go  circuit_breaker.go  circuit_breaker_test.go  go.mod  go.sum  main.go  proxy.go  proxy_test.go  recipe.go  recipe_test.go  telemetry.go  telemetry_test.go  user.go  user_test.go
shared/: auth.go  go.mod  go.sum
user/: Dockerfile  auth.go  go.mod  go.sum  main.go  main_test.go  passwords.go  shards.go  telemetry.go  user.go  user_test.go
(+44 files in other folders)
