[tool.poetry]
name = "forager"
version = "0.1.0"
description = ""
authors = ["Florian Adomeit <florian@elsewhen.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
requests = "^2.26.0"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
